--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://google.com" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/DhIAoJI" style="text-decoration: none;">
                 <span class="span-btn">QUERO UMA PELE PERFEITA AGORA!</span>
                 <span class="span-btn2">(atenção: oferta disponível por apenas 3 dias)</span>
               </a>
