--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Zero Barriga</title>
+    <title>Dr. Pele Perfeita</title>
     
     <style type="text/css">
       header {
@@ -59,16 +59,16 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>5 Receitas Simples Que Fazem A Pele Esticar e Rejuvenescer Até 13 anos Em 30 Dias</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO OBTER ACESSO!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
+              <a href="https://pay.kiwify.com.br/DhIAoJI" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO UMA PELE PERFEITA AGORA!</span>
+                <span class="span-btn2">(atenção: oferta disponível por apenas 3 dias)</span>
               </a>
             </div>
           </div>
@@ -97,7 +97,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Amei vou fazer hoje mesmo pois estou em processo de emagrecimento. Muito obrigada 😘</td>
+                      <td class="fb-comments-comment-text">Amei vou fazer hoje mesmo pois estou ficando velha. Muito obrigada 😘</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -126,7 +126,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Ele também me ajudou perdi 22kg obrigado, e ajuda até hoje com essas receitas deliciosas</td>
+                      <td class="fb-comments-comment-text">Ela me ajudou muito, me sinto mais jovem obrigada, e ajuda até hoje com essas receitas deliciosas</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -155,7 +155,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Esse vídeo mudou minha vida, já são 20 kilos a menos em 4 meses ,agradecida</td>
+                      <td class="fb-comments-comment-text">Esse vídeo mudou minha vida, já se passou 2 dias e me sinto  4 anos mais jovem ,agradecida</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -184,7 +184,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Tomei essa vitamina durante 1 mês, acompanhada da dieta de açúcar e carboidratos, perdir 5 quilos, e me sentia bem melhor, faz um ano, agora vou voltar a tomar novamente.</td>
+                      <td class="fb-comments-comment-text">Tomei a iniciativa e vou mudar de vida, quero me sentir poderosaa!!.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -213,7 +213,8 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Estou feliz, a 7 meses atrás eu estava com 78kg e hoje estou com 54kg até postei a respeito no meu perfil aqui no face o antes e depois 😘😘😘</td>
+                      <td class="fb-comments-comment-text">Estou feliz, a 7 meses atrás eu estava com a autoestima lá em baixo e hoje estou me sentindo renovada, muito grata mesmo
+                     😘😘😘</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -242,7 +243,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Realmente funciona, minha barriga tem diminuído a cada dia. Obrigada por compartilhar 🥰</td>
+                      <td class="fb-comments-comment-text">Realmente funciona, minhas expressões faciais tem diminuído a cada dia. Obrigada por compartilhar 🥰</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -272,7 +273,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Emagrece mesmo gente receita testada e aprovada</td>
+                      <td class="fb-comments-comment-text">Estica mesmo gente receita testada e aprovada</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -304,7 +305,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Maravilhosa melhor de todas fez 7dias tomando e 7 klos já conseguir eliminar tô muito feliz obrigado 😍😍😍</td>
+                        <td class="fb-comments-comment-text">Maravilhosa melhor de todas fez 7dias aplicando e já consegui sentir resultado no meu rosto, tô muito feliz, cada vez que me olho no espelho obrigadaaa 😍😍😍</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
@@ -334,7 +335,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Eu já estou tomando, já eliminei 7 kls, já fez muita diferença, minhas roupas estavam todas apertadas,  ágora já estão largas, estou num pós operatório de coluna por isso engordei muito 15 Kg, estava sentindo muita dor agora amenizou muito depois que emagreci já consigo andar mais q antes 🙏🙏🙏🙏🙏🙏</td>
+                        <td class="fb-comments-comment-text">Gentee faça! Fiz algumas vezes e meu rosto já mudou, ameiii 😍</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
@@ -364,7 +365,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Muito Obrigada tem me ajudado e muito,Adorei ...Durmo super bem e vendo resultado ..🌹🥰🙋</td>
+                        <td class="fb-comments-comment-text">1° Dia concluído e já estou sentindo toda a musculatura do rosto! É só eu, ou vocês também sentiram ? Por isso deve ser muito bom!!</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
@@ -423,7 +424,7 @@
                         </td>
                       </tr>
                       <tr>
-                        <td class="fb-comments-comment-text">Meu irmão perdeu 6 kl em 15 dias... vou começar hj rsrs</td>
+                        <td class="fb-comments-comment-text">Maravilhosa, fiz a primeira vez e senti meu rosto uns 5 anos mais jovem, rsrsrs não vou mais parar de fazer rsrsrs</td>
                       </tr>
                       <tr>
                         <td class="fb-comments-comment-actions">
@@ -443,9 +444,9 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO OBTER ACESSO!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
+              <a href="https://pay.kiwify.com.br/DhIAoJI" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO UMA PELE PERFEITA AGORA!</span>
+                <span class="span-btn2">(atenção: oferta disponível por apenas 3 dias)</span>
               </a>
             </div>
           </div>
@@ -458,7 +459,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1637000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 0); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
