--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Dosis:wght@200;300;400;500;600;700;800&family=Oswald:wght@200;300;400;500;600;700&family=Signika:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./assets/css/com.css">
+    <link rel="icon" href="./assets/img/Icon.png"> 
 
     <!-- Título da Página -->
     <title>Dr. Pele Perfeita</title>
@@ -62,7 +63,7 @@
             <h3 class="my-4"><b>5 Receitas Simples Que Fazem A Pele Esticar e Rejuvenescer Até 13 anos Em 30 Dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_623c973b752ce700085c5b5a">var s=document.createElement("script");s.src="https://cdn.converteai.net/f361bcdb-a167-406e-9b68-f443f29cbd6b/players/623c973b752ce700085c5b5a/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
