--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>5 Receitas Simples Que Fazem A Pele Esticar e Rejuvenescer Até 13 anos Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>O Método de 5 Receitas Simples Que Fazem A Pele Esticar e Rejuvenescer Até 13 anos Em 30 Dias</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_623c973b752ce700085c5b5a">var s=document.createElement("script");s.src="https://cdn.converteai.net/f361bcdb-a167-406e-9b68-f443f29cbd6b/players/623c973b752ce700085c5b5a/player.js",s.async=!0,document.head.appendChild(s);</script>
