--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="facebook-domain-verification" content="ypembe2ybldv04i1eaxuuyr8lxxv82" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -46,7 +47,7 @@ src="https://www.facebook.com/tr?id=640864820312690&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
     
-  </head><meta name="facebook-domain-verification" content="ypembe2ybldv04i1eaxuuyr8lxxv82" />
+  </head>
   <body>
     
     <header class="py-4">
